--- a/A03_SOMA_CODINGTEST/B_01_05/C02_D-29_260206.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C02_D-29_260206.ipynb
@@ -5,9 +5,57 @@
    "execution_count": null,
    "id": "95dc1520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 0 0 1 1 0 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. 알고(구현): 백준 1244 (스위치 켜고 끄기) - https://www.acmicpc.net/problem/1244"
+    "# 1. 알고(구현): 백준 1244 (스위치 켜고 끄기) - https://www.acmicpc.net/problem/1244\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "0 1 0 1 0 0 0 1\n",
+    "2\n",
+    "1 3\n",
+    "2 3''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "    lights = [0] + list(map(int, input().split()))\n",
+    "\n",
+    "    P = int(input())\n",
+    "    for _ in range(P):\n",
+    "        mw, num = map(int, input().split())\n",
+    "\n",
+    "        if mw == 1:  # 남자\n",
+    "            for i in range(num, N + 1, num):\n",
+    "                lights[i] = 1 if lights[i] == 0 else 0\n",
+    "        else:\n",
+    "            start, end = num, num\n",
+    "\n",
+    "            while 1 < start and end < N and lights[start - 1] == lights[end + 1]:\n",
+    "                start -= 1\n",
+    "                end += 1\n",
+    "\n",
+    "            for i in range(start, end + 1):\n",
+    "                lights[i] = 1 if lights[i] == 0 else 0\n",
+    "\n",
+    "    for i in range(1, N+1, 20):\n",
+    "        print(*lights[i:i+20])\n",
+    "\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -15,9 +63,50 @@
    "execution_count": null,
    "id": "5872d2a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.547796284592874\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. 알고(수학): 백준 1064 (평행사변형) - https://www.acmicpc.net/problem/1064"
+    "# 2. 알고(수학): 백준 1064 (평행사변형) - https://www.acmicpc.net/problem/1064\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1 2 3 4 8 7''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    x1, y1, x2, y2, x3, y3 = map(int, input().split())\n",
+    "    if (x2 - x1) * (y3 - y2) == (x3 - x2) * (y2 - y1):\n",
+    "        print(-1.0)\n",
+    "        return\n",
+    "\n",
+    "    a, b, c = (x1, y1), (x2, y2), (x3, y3)\n",
+    "\n",
+    "    def length_two_dot(s, e):\n",
+    "        return (s[0] - e[0])**2 + (s[1] - e[1])**2\n",
+    "\n",
+    "    lengths = [\n",
+    "        length_two_dot(a, b),\n",
+    "        length_two_dot(b, c),\n",
+    "        length_two_dot(c, a)\n",
+    "    ]\n",
+    "    lengths.sort()\n",
+    "\n",
+    "    max_value = lengths[1]**0.5 + lengths[2]**0.5\n",
+    "    min_value = lengths[0]**0.5 + lengths[1]**0.5\n",
+    "    print(2*(max_value - min_value))\n",
+    "\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -25,9 +114,38 @@
    "execution_count": null,
    "id": "8a4bd383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. 알고(Set): 백준 11478 (서로 다른 부분 문자열의 개수) - https://www.acmicpc.net/problem/11478"
+    "# 3. 알고(Set): 백준 11478 (서로 다른 부분 문자열의 개수) - https://www.acmicpc.net/problem/11478\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''ababc''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    S = input().rstrip()\n",
+    "    sub_sets = set(S)\n",
+    "\n",
+    "    for i in range(len(S)):\n",
+    "        for j in range(i + 1, len(S) + 1):\n",
+    "            sub_sets.add(S[i:j])\n",
+    "\n",
+    "    print(len(sub_sets))\n",
+    "\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -35,9 +153,39 @@
    "execution_count": null,
    "id": "7e89ad11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. 알고(그리디): 백준 1439 (뒤집기) - https://www.acmicpc.net/problem/1439"
+    "# 4. 알고(그리디): 백준 1439 (뒤집기) - https://www.acmicpc.net/problem/1439\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''11001100110011000001''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "    S = input().rstrip()\n",
+    "    target = S[0]\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in S:\n",
+    "        if i != target:\n",
+    "            count += 1\n",
+    "            target = '1' if target == '0' else '0'\n",
+    "\n",
+    "    print((count + 1) // 2)\n",
+    "\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -49,28 +197,142 @@
     "-- 5. SQL(Lv.1): 12세 이하인 여자 환자 목록 출력하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/132201\n",
     "\n",
-    "\n",
+    "SELECT\n",
+    "    PT_NAME,\n",
+    "    PT_NO,\n",
+    "    GEND_CD,\n",
+    "    AGE,\n",
+    "    IFNULL(TLNO, 'NONE')\n",
+    "FROM\n",
+    "    PATIENT\n",
+    "WHERE\n",
+    "    AGE <= 12\n",
+    "    AND GEND_CD = 'W'\n",
+    "ORDER BY\n",
+    "    AGE DESC,\n",
+    "    PT_NAME ASC;\n",
+    "    \n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "766b1d8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. 알고(시뮬): 백준 14891 (톱니바퀴) - https://www.acmicpc.net/problem/14891"
+    "# 1. 알고(시뮬): 백준 14891 (톱니바퀴) - https://www.acmicpc.net/problem/14891\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''11111111\n",
+    "11111111\n",
+    "11111111\n",
+    "11111111\n",
+    "3\n",
+    "1 1\n",
+    "2 1\n",
+    "3 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    circles = [[0]]\n",
+    "\n",
+    "    for _ in range(4):\n",
+    "        circles.append(deque(map(int, input().rstrip())))\n",
+    "\n",
+    "    def rotate_circle(n, d):\n",
+    "        dirs = [0] * 5\n",
+    "        dirs[n] = d\n",
+    "        \n",
+    "        # 1. 왼쪽으로 전파 (n번 기준 왼쪽 확인)\n",
+    "        for i in range(n, 1, -1):\n",
+    "            if circles[i][6] != circles[i-1][2]:\n",
+    "                dirs[i-1] = -dirs[i] \n",
+    "            else:\n",
+    "                break\n",
+    "                \n",
+    "        # 2. 오른쪽으로 전파 (n번 기준 오른쪽 확인)\n",
+    "        for i in range(n, 4):\n",
+    "            if circles[i][2] != circles[i+1][6]:\n",
+    "                dirs[i+1] = -dirs[i]\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        # 회전\n",
+    "        for i in range(1, 5):\n",
+    "            circles[i].rotate(dirs[i])\n",
+    "\n",
+    "    N = int(input())\n",
+    "    for _ in range(N):\n",
+    "        n, d = map(int, input().split())\n",
+    "        rotate_circle(n, d)\n",
+    "\n",
+    "    sum_val = 0\n",
+    "    for i, row in enumerate(circles[1:]):\n",
+    "        sum_val += row[0] * 2**(i)\n",
+    "    print(sum_val)\n",
+    "\n",
+    "\n",
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "4caa2de8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. 알고(DP): 백준 11048 (이동하기) - https://www.acmicpc.net/problem/11048"
+    "# 2. 알고(DP): 백준 11048 (이동하기) - https://www.acmicpc.net/problem/11048\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 3\n",
+    "1 2 3\n",
+    "6 5 4\n",
+    "7 8 9\n",
+    "12 11 10''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N, M = map(int, input().split())\n",
+    "    maze = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "    dp = [[0] * (M + 1) for _ in range(N + 1)]\n",
+    "\n",
+    "    # 대각선은 검사안해도 최대값에는 영향이 없음. \n",
+    "    for i in range(1, N + 1):\n",
+    "        for j in range(1, M + 1):\n",
+    "            dp[i][j] = maze[i-1][j-1] + max(dp[i-1][j], dp[i][j-1])\n",
+    "\n",
+    "    print(dp[N][M])\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -80,7 +342,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. 알고(그래프): 백준 1916 (최소비용 구하기) - https://www.acmicpc.net/problem/1916"
+    "# 3. 알고(그래프): 백준 1916 (최소비용 구하기) - https://www.acmicpc.net/problem/1916\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -90,7 +366,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. 알고(백트래킹): 백준 2580 (스도쿠) - https://www.acmicpc.net/problem/2580"
+    "# 4. 알고(백트래킹): 백준 2580 (스도쿠) - https://www.acmicpc.net/problem/2580\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -107,8 +397,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
