--- a/A03_SOMA_CODINGTEST/B_01_05/C02_D-29_260206.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C02_D-29_260206.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "4caa2de8",
    "metadata": {},
    "outputs": [
@@ -325,62 +325,177 @@
     "\n",
     "    dp = [[0] * (M + 1) for _ in range(N + 1)]\n",
     "\n",
-    "    # 대각선은 검사안해도 최대값에는 영향이 없음. \n",
+    "    # 대각선은 검사안해도 최대값에는 영향이 없음.\n",
     "    for i in range(1, N + 1):\n",
     "        for j in range(1, M + 1):\n",
     "            dp[i][j] = maze[i-1][j-1] + max(dp[i-1][j], dp[i][j-1])\n",
     "\n",
     "    print(dp[N][M])\n",
     "\n",
+    "\n",
     "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b51edaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1916 (최소비용 구하기) - https://www.acmicpc.net/problem/1916\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "8\n",
+    "1 2 2\n",
+    "1 3 3\n",
+    "1 4 1\n",
+    "1 5 10\n",
+    "2 4 2\n",
+    "3 4 1\n",
+    "3 5 1\n",
+    "4 5 3\n",
+    "1 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = int(input()), int(input())\n",
+    "    graph = [[] for _ in range(N + 1)]\n",
+    "    \n",
+    "    for _ in range(M):\n",
+    "        s, e, c = map(int, input().split())\n",
+    "        graph[s].append((e, c))\n",
+    "    \n",
+    "    S, E = map(int, input().split())\n",
+    "    pq = [(0, S)] # 시작 노드 (현재 비용, 현재 위치)\n",
     "\n",
+    "    INF = sys.maxsize\n",
+    "    min_dist = [INF] * (N + 1)\n",
+    "    min_dist[S] = 0\n",
     "\n",
-    "solve()\n"
+    "    while pq:\n",
+    "        cur_dist, cur = heappop(pq)\n",
+    "        if cur_dist <= min_dist[cur]:\n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                nxt_dist = cur_dist + cost\n",
+    "                if nxt_dist < min_dist[nxt]:\n",
+    "                    min_dist[nxt] = nxt_dist\n",
+    "                    heappush(pq, (nxt_dist, nxt))\n",
+    "\n",
+    "    print(min_dist[E])\n",
+    "\n",
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "4389d79e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 4 6 9 2 7 8\n",
+      "7 8 2 1 3 5 6 4 9\n",
+      "4 6 9 2 7 8 1 3 5\n",
+      "3 2 1 5 4 6 8 9 7\n",
+      "8 7 4 9 1 3 5 2 6\n",
+      "5 9 6 8 2 7 4 1 3\n",
+      "9 1 7 6 5 2 3 8 4\n",
+      "6 4 3 7 8 1 9 5 2\n",
+      "2 5 8 3 9 4 7 6 1\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 2580 (스도쿠) - https://www.acmicpc.net/problem/2580\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''0 3 5 4 6 9 2 7 8\n",
+    "7 8 2 1 0 5 6 0 9\n",
+    "0 6 0 2 7 8 1 3 5\n",
+    "3 2 1 0 4 6 8 9 7\n",
+    "8 0 4 9 1 3 5 0 6\n",
+    "5 9 6 8 2 0 4 1 3\n",
+    "9 1 7 6 5 2 0 8 0\n",
+    "6 0 3 7 0 1 9 5 2\n",
+    "2 5 8 3 9 4 7 6 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    board = [list(map(int, input().split())) for _ in range(9)]\n",
+    "    zeros = [(i, j) for i in range(9) for j in range(9) if board[i][j] == 0]\n",
     "\n",
-    "    pass\n",
+    "    row_i = [[False] * 10 for _ in range(9)]\n",
+    "    col_i = [[False] * 10 for _ in range(9)]\n",
+    "    sqr_i = [[False] * 10 for _ in range(9)]\n",
+    "\n",
+    "    def get_sqr_idx(r, c):\n",
+    "        return (r // 3) * 3 + (c // 3)\n",
+    "\n",
+    "    def flag(r, c, num, bool):\n",
+    "        row_i[r][num], col_i[c][num] = bool, bool\n",
+    "        sqr_i[get_sqr_idx(r, c)][num] = bool\n",
+    "\n",
+    "    for r in range(9):\n",
+    "        for c in range(9):\n",
+    "            num = board[r][c]\n",
+    "            if num != 0:\n",
+    "                flag(r, c, num, True)\n",
+    "\n",
+    "    def dfs(idx):\n",
+    "        # 끝까지 오면 종료.\n",
+    "        if idx == len(zeros):\n",
+    "            for row in board:\n",
+    "                print(*row)\n",
+    "            sys.exit(0)\n",
+    "\n",
+    "        r, c = zeros[idx]\n",
+    "        for num in range(1, 10):\n",
+    "            row_check = not row_i[r][num]\n",
+    "            col_check = not col_i[c][num]\n",
+    "            sqr_check = not sqr_i[get_sqr_idx(r, c)][num]\n",
+    "\n",
+    "            if row_check and col_check and sqr_check:\n",
+    "                flag(r, c, num, True)\n",
+    "                board[r][c] = num\n",
+    "\n",
+    "                dfs(idx + 1)\n",
+    "\n",
+    "                board[r][c] = 0\n",
+    "                flag(r, c, num, False)\n",
+    "    dfs(0)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -390,8 +505,21 @@
    "source": [
     "```sql\n",
     "-- 5. SQL(Lv.3): 카테고리 별 도서 판매량 집계하기 \n",
-    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131123\n",
-    "\n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/144855\n",
+    "SELECT\n",
+    "    CATEGORY,\n",
+    "    SUM(S.SALES) AS TOTAL_SALES\n",
+    "FROM\n",
+    "    BOOK B\n",
+    "JOIN\n",
+    "    BOOK_SALES S\n",
+    "    ON B.BOOK_ID = S.BOOK_ID\n",
+    "WHERE\n",
+    "    S.SALES_DATE LIKE '2022-01%'\n",
+    "GROUP BY\n",
+    "    B.CATEGORY\n",
+    "ORDER BY\n",
+    "    B.CATEGORY ASC;\n",
     "```"
    ]
   }
