--- a/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
@@ -5,9 +5,78 @@
    "execution_count": null,
    "id": "917f586e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5), (0, 3), (8, 0), (3, 0)]\n",
+      "[23, 30, 8, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. 알고(구현): 백준 2564 (경비원) - https://www.acmicpc.net/problem/2564"
+    "# 1. 알고(구현): 백준 2564 (경비원) - https://www.acmicpc.net/problem/2564\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10 5\n",
+    "3\n",
+    "1 4\n",
+    "3 2\n",
+    "2 8\n",
+    "2 3''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "    X, Y = map(int, input().split())\n",
+    "    N = int(input())\n",
+    "\n",
+    "    positions = [tuple(map(int, input().split())) for _ in range(N + 1)]\n",
+    "\n",
+    "    x_y = []\n",
+    "\n",
+    "    # 좌표로 변환 (서남 쪽 (0,0) 동북 쪽 (X, Y))\n",
+    "    for d, length in positions:\n",
+    "\n",
+    "        if d == 1:  # 북쪽\n",
+    "            x_y.append((length, Y))\n",
+    "        elif d == 2:  # 남쪽\n",
+    "            x_y.append((length, 0))\n",
+    "        elif d == 3:  # 서쪽\n",
+    "            x_y.append((0, Y-length))\n",
+    "        else:\n",
+    "            x_y.append((X, Y-length))\n",
+    "\n",
+    "    print(x_y)\n",
+    "\n",
+    "    edges = []\n",
+    "\n",
+    "    for x in range(X+1):\n",
+    "        edges.append((x, 0))\n",
+    "    for y in range(Y+1):\n",
+    "        edges.append((X, y))\n",
+    "    for x in range(X, -1, -1):\n",
+    "        edges.append((x, Y))\n",
+    "    for y in range(Y, -1, -1):\n",
+    "        edges.append((0, y))\n",
+    "\n",
+    "    edge_length = len(edges)\n",
+    "\n",
+    "    indexs = []\n",
+    "    for x, y in x_y:\n",
+    "        for j in range(edge_length):\n",
+    "            if (x, y) == edges[j]:\n",
+    "                indexs.append(j)\n",
+    "\n",
+    "    print(indexs)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -17,7 +86,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. 알고(수학): 백준 1358 (하키) - https://www.acmicpc.net/problem/1358"
+    "# 2. 알고(수학): 백준 1358 (하키) - https://www.acmicpc.net/problem/1358\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -27,7 +110,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. 알고(Map): 백준 20920 (영단어 암기는 괴로워) - https://www.acmicpc.net/problem/20920"
+    "# 3. 알고(Map): 백준 20920 (영단어 암기는 괴로워) - https://www.acmicpc.net/problem/20920\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -37,7 +134,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. 알고(그리디): 백준 1343 (폴리오미노) - https://www.acmicpc.net/problem/1343"
+    "# 4. 알고(그리디): 백준 1343 (폴리오미노) - https://www.acmicpc.net/problem/1343\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -57,7 +168,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 알고(시뮬): 백준 15683 (감시) - https://www.acmicpc.net/problem/15683"
+    "# 1. 알고(시뮬): 백준 15683 (감시) - https://www.acmicpc.net/problem/15683\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -67,7 +192,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. 알고(DP): 백준 1535 (안녕) - https://www.acmicpc.net/problem/1535"
+    "# 2. 알고(DP): 백준 1535 (안녕) - https://www.acmicpc.net/problem/1535\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -77,7 +216,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. 알고(그래프): 백준 4485 (녹색 옷 입은 애가 젤다지?) - https://www.acmicpc.net/problem/4485"
+    "# 3. 알고(그래프): 백준 4485 (녹색 옷 입은 애가 젤다지?) - https://www.acmicpc.net/problem/4485\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -87,7 +240,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. 알고(백트래킹): 백준 1987 (알파벳) - https://www.acmicpc.net/problem/1987"
+    "# 4. 알고(백트래킹): 백준 1987 (알파벳) - https://www.acmicpc.net/problem/1987\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -102,8 +269,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
