--- a/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "917f586e",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,8 @@
      "output_type": "stream",
      "text": [
       "[(4, 5), (0, 3), (8, 0), (3, 0)]\n",
-      "[23, 30, 8, 3]\n"
+      "[23, 30, 8, 3]\n",
+      "26\n"
      ]
     }
    ],
@@ -74,7 +75,13 @@
     "\n",
     "    print(indexs)\n",
     "\n",
-    "    \n",
+    "    INF = sys.maxsize\n",
+    "    min_sum = 0\n",
+    "    flag_val = indexs[-1]\n",
+    "    for target in indexs[:-1]:\n",
+    "        min_sum += min(abs(target - flag_val), abs(edge_length - (target - flag_val)) )\n",
+    "    print(min_sum)\n",
+    "\n",
     "\n",
     "solve()"
    ]
