--- a/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "917f586e",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4, 5), (0, 3), (8, 0), (3, 0)]\n",
-      "[23, 30, 8, 3]\n",
-      "26\n"
+      "23\n"
      ]
     }
    ],
@@ -37,49 +35,24 @@
     "    N = int(input())\n",
     "\n",
     "    positions = [tuple(map(int, input().split())) for _ in range(N + 1)]\n",
+    "    dists = []\n",
     "\n",
-    "    x_y = []\n",
-    "\n",
-    "    # 좌표로 변환 (서남 쪽 (0,0) 동북 쪽 (X, Y))\n",
+    "    total_len = (X + Y) * 2\n",
     "    for d, length in positions:\n",
-    "\n",
-    "        if d == 1:  # 북쪽\n",
-    "            x_y.append((length, Y))\n",
+    "        if d == 1:    # 북쪽\n",
+    "            dists.append(length)\n",
+    "        elif d == 4:  # 동쪽\n",
+    "            dists.append(X + length)\n",
     "        elif d == 2:  # 남쪽\n",
-    "            x_y.append((length, 0))\n",
+    "            dists.append(X + Y + (X - length))\n",
     "        elif d == 3:  # 서쪽\n",
-    "            x_y.append((0, Y-length))\n",
-    "        else:\n",
-    "            x_y.append((X, Y-length))\n",
+    "            dists.append(X + Y + X + (Y - length))\n",
     "\n",
-    "    print(x_y)\n",
-    "\n",
-    "    edges = []\n",
-    "\n",
-    "    for x in range(X+1):\n",
-    "        edges.append((x, 0))\n",
-    "    for y in range(Y+1):\n",
-    "        edges.append((X, y))\n",
-    "    for x in range(X, -1, -1):\n",
-    "        edges.append((x, Y))\n",
-    "    for y in range(Y, -1, -1):\n",
-    "        edges.append((0, y))\n",
-    "\n",
-    "    edge_length = len(edges)\n",
-    "\n",
-    "    indexs = []\n",
-    "    for x, y in x_y:\n",
-    "        for j in range(edge_length):\n",
-    "            if (x, y) == edges[j]:\n",
-    "                indexs.append(j)\n",
-    "\n",
-    "    print(indexs)\n",
-    "\n",
-    "    INF = sys.maxsize\n",
     "    min_sum = 0\n",
-    "    flag_val = indexs[-1]\n",
-    "    for target in indexs[:-1]:\n",
-    "        min_sum += min(abs(target - flag_val), abs(edge_length - (target - flag_val)) )\n",
+    "    guard = dists[-1]\n",
+    "    for target in dists[:-1]:\n",
+    "        diff = abs(target - guard)\n",
+    "        min_sum += min(diff, total_len - diff)\n",
     "    print(min_sum)\n",
     "\n",
     "\n",
@@ -88,74 +61,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "e6d5c2da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1358 (하키) - https://www.acmicpc.net/problem/1358\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''24 100 -62 71 8\n",
+    "-63 109\n",
+    "-26 164\n",
+    "-9 91\n",
+    "-113 80\n",
+    "-124 75\n",
+    "-95 140\n",
+    "-89 116\n",
+    "-55 113''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    W, H, X, Y, P = map(int, input().split())\n",
+    "    peoples = [tuple(map(int, input().split())) for _ in range(P)]\n",
     "\n",
-    "    pass\n",
+    "    radius = H // 2\n",
+    "    r_sq = radius**2\n",
+    "\n",
+    "    left_center = (X, Y + radius)\n",
+    "    right_center = (X + W, Y + radius)\n",
+    "\n",
+    "    def get_dist(a, b):\n",
+    "        return (a[0] - b[0])**2 + (a[1] - b[1])**2\n",
+    "\n",
+    "    count = 0\n",
+    "    for people in peoples:\n",
+    "        px, py = people\n",
+    "\n",
+    "        in_rect = (X <= px <= X + W) and (Y <= py <= Y + H)\n",
+    "        in_left_circle = get_dist(people, left_center) <= r_sq\n",
+    "        in_right_circle = get_dist(people, right_center) <= r_sq\n",
+    "\n",
+    "        if in_rect or in_left_circle or in_right_circle:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "0d023981",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "swift\n",
+      "mouse\n",
+      "appearance\n",
+      "attendance\n",
+      "append\n",
+      "wallet\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 20920 (영단어 암기는 괴로워) - https://www.acmicpc.net/problem/20920\n",
     "import sys\n",
+    "from collections import defaultdict \n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''12 5\n",
+    "appearance\n",
+    "append\n",
+    "attendance\n",
+    "swim\n",
+    "swift\n",
+    "swift\n",
+    "swift\n",
+    "mouse\n",
+    "wallet\n",
+    "mouse\n",
+    "ice\n",
+    "age''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = map(int, input().split())\n",
+    "    count_dict = defaultdict(int)\n",
     "\n",
+    "    for _ in range(N):\n",
+    "        word = input().rstrip()\n",
+    "        if len(word) >= M:\n",
+    "             count_dict[word] += 1\n",
+    "    \n",
+    "    lst = list(count_dict.items())\n",
+    "    lst.sort(key=lambda x: (-x[1], -len(x[0]), x[0]))\n",
+    "\n",
+    "    print(\"\\n\".join(map(lambda x: x[0], lst)))\n",
     "\n",
     "solve()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "6994b133",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BB.AAAAAAAABB..AAAAAAAA...AAAABB\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 1343 (폴리오미노) - https://www.acmicpc.net/problem/1343\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''XX.XXXXXXXXXX..XXXXXXXX...XXXXXX''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    S = input().rstrip()\n",
+    "\n",
+    "    info = []\n",
+    "    counter = 0\n",
+    "    for i, c in enumerate(S):\n",
+    "        if c == '.':\n",
+    "            info.append('.')\n",
+    "        else:\n",
+    "            counter += 1\n",
+    "            if i + 1 == len(S) or S[i + 1] == '.':\n",
+    "                info.append(counter)\n",
+    "                counter = 0\n",
+    "\n",
+    "    result = []\n",
+    "    for i in info:\n",
+    "        if i == '.':\n",
+    "            result.append('.')\n",
+    "        else:\n",
+    "            a = i // 4\n",
+    "            b = i % 4\n",
+    "            \n",
+    "            if b == 1 or b == 3:\n",
+    "                print(-1)\n",
+    "                return\n",
+    "            \n",
+    "            result.extend('AAAA' * a + 'BB' * (b//2))\n",
+    "\n",
+    "    print(\"\".join(result))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -165,6 +247,17 @@
    "source": [
     "```sql\n",
     "-- 5. SQL(Lv.1): 모든 레코드 조회하기 - https://school.programmers.co.kr/learn/courses/30/lessons/59034\n",
+    "SELECT\n",
+    "    ANIMAL_ID,\n",
+    "    ANIMAL_TYPE,\n",
+    "    DATETIME,\n",
+    "    INTAKE_CONDITION,\n",
+    "    NAME,\n",
+    "    SEX_UPON_INTAKE\n",
+    "FROM\n",
+    "    ANIMAL_INS\n",
+    "ORDER BY\n",
+    "    ANIMAL_ID;\n",
     "```"
    ]
   },
@@ -173,23 +266,101 @@
    "execution_count": null,
    "id": "402783f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 15683 (감시) - https://www.acmicpc.net/problem/15683\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 6\n",
+    "0 0 0 0 0 0\n",
+    "0 2 0 0 0 0\n",
+    "0 0 0 0 6 0\n",
+    "0 6 0 0 2 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "# [i] : [0]상, [1]우, [2]하, [3]좌\n",
+    "dr = (-1, 0, 1, 0)\n",
+    "dc = (0, 1, 0, -1)\n",
+    "\n",
+    "base_dirs = [\n",
+    "    (1, ),\n",
+    "    (1, 3),\n",
+    "    (0, 1),\n",
+    "    (0, 1, 3),\n",
+    "    (0, 1, 2, 3)\n",
+    "]\n",
+    "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    min_val = sys.maxsize\n",
     "\n",
-    "    pass\n",
+    "    # 회전 방향 저장.\n",
+    "    dirs_modes = [[]]\n",
+    "    for dirs in base_dirs:\n",
+    "        temp_set = set()\n",
+    "        for i in range(4):  # 90도 회전 i 번,\n",
+    "            rotate_cctv = [(d + i) % 4 for d in dirs]\n",
+    "            rotate_cctv.sort()  # 중복제거를 위해 정렬 후 set(사용)\n",
+    "            temp_set.add(tuple(rotate_cctv))\n",
+    "        dirs_modes.append(list(temp_set))\n",
+    "\n",
+    "    # CCTV 좌표와 카메라 type\n",
+    "    cctvs = [\n",
+    "        (r, c, board[r][c])\n",
+    "        for c in range(M)\n",
+    "        for r in range(N)\n",
+    "        if 1 <= board[r][c] <= 5\n",
+    "    ]\n",
+    "\n",
+    "    # 감시대상은 val = -1, 복구는 +1\n",
+    "    def update(r, c, dirs, val):\n",
+    "        for d in dirs:  # 정해진 방향\n",
+    "            nr, nc = r, c\n",
+    "\n",
+    "            while True:\n",
+    "                nr += dr[d]\n",
+    "                nc += dc[d]\n",
+    "                vaild_idx = (0 <= nr < N) and (0 <= nc < M)\n",
+    "\n",
+    "                if not vaild_idx or board[nr][nc] == 6:\n",
+    "                    break                # 멈춤조건,\n",
+    "                if board[nr][nc] <= 0:\n",
+    "                    board[nr][nc] += val  # 카메라 통과.\n",
+    "\n",
+    "    def dfs(depth):\n",
+    "        nonlocal min_val\n",
+    "\n",
+    "        if depth == len(cctvs):\n",
+    "            sum_value = sum(row.count(0) for row in board)\n",
+    "            if sum_value < min_val:\n",
+    "                min_val = sum_value\n",
+    "            return\n",
+    "\n",
+    "        r, c, cctv_type = cctvs[depth]\n",
+    "        for mode in dirs_modes[cctv_type]:\n",
+    "            update(r, c, mode, -1)\n",
+    "            dfs(depth + 1)\n",
+    "            update(r, c, mode, +1)\n",
+    "\n",
+    "    dfs(0)\n",
+    "    print(min_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -197,23 +368,47 @@
    "execution_count": null,
    "id": "cd21d630",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 1535 (안녕) - https://www.acmicpc.net/problem/1535\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''8\n",
+    "100 26 13 17 24 33 100 99\n",
+    "34 56 21 1 24 34 100 99''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    L = list(map(int, input().split()))\n",
+    "    J = list(map(int, input().split()))\n",
+    "\n",
+    "    LIMIT = 99\n",
+    "    dp = [0] * (LIMIT + 1)  # dp[health] = 체력을 사용해 최대로 얻을 수 있는 즐거움\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        cost_h = L[i]\n",
+    "        get_joy = J[i]\n",
+    "\n",
+    "        for h in range(LIMIT, cost_h - 1, -1):\n",
+    "            dp[h] = max(dp[h], get_joy + dp[h - cost_h])\n",
+    "\n",
+    "    print(dp[LIMIT])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -227,7 +422,25 @@
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "5 5 4\n",
+    "3 9 1\n",
+    "3 2 7\n",
+    "5\n",
+    "3 7 2 0 1\n",
+    "2 8 0 9 1\n",
+    "1 2 1 8 1\n",
+    "9 8 9 2 0\n",
+    "3 6 5 1 5\n",
+    "7\n",
+    "9 0 5 1 1 5 3\n",
+    "4 1 2 1 6 5 3\n",
+    "0 7 6 1 6 8 5\n",
+    "1 1 7 8 3 2 3\n",
+    "9 4 0 7 6 4 1\n",
+    "5 8 3 2 4 8 3\n",
+    "7 4 8 4 8 3 4\n",
+    "0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
