--- a/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C03_D-28_260207.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "402783f4",
    "metadata": {},
    "outputs": [
@@ -413,13 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "4596bc30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem 1: 20\n",
+      "Problem 2: 19\n",
+      "Problem 3: 36\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 4485 (녹색 옷 입은 애가 젤다지?) - https://www.acmicpc.net/problem/4485\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
     "sys.stdin = StringIO('''3\n",
@@ -445,12 +456,40 @@
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
-    "def solve():\n",
+    "def solve(n, count):\n",
+    "    grid = [tuple(map(int, input().split())) for _ in range(n)]\n",
+    "    directions = [(-1, 0), (0, +1), (+1, 0), (0, -1)]\n",
     "\n",
-    "    pass\n",
+    "    # 시작 (0, 0) 에서 (n, n) 까지 최소 루피\n",
+    "    INF = sys.maxsize\n",
+    "    min_rupee = [[INF] * n for _ in range(n)]\n",
+    "\n",
+    "    pq = [(grid[0][0], (0, 0))]  # (차감 루피, (r, c) )\n",
+    "    min_rupee[0][0] = grid[0][0]\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_cost, (r, c) = heappop(pq)\n",
+    "        if cur_cost > min_rupee[r][c]:\n",
+    "            continue\n",
+    "        \n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if (0 <= nr < n) and (0 <= nc < n):\n",
+    "                nxt_cost = cur_cost + grid[nr][nc]\n",
+    "                if nxt_cost < min_rupee[nr][nc]:\n",
+    "                    min_rupee[nr][nc] = nxt_cost\n",
+    "                    heappush(pq, (nxt_cost, (nr, nc)))\n",
+    "\n",
+    "    print(f\"Problem {count}: {min_rupee[n-1][n-1]}\")\n",
     "\n",
     "\n",
-    "solve()\n"
+    "count = 0\n",
+    "while True:\n",
+    "    N = int(input())\n",
+    "    if N == 0:\n",
+    "        break\n",
+    "    count += 1\n",
+    "    solve(N, count)"
    ]
   },
   {
@@ -458,23 +497,58 @@
    "execution_count": null,
    "id": "1b94c1be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1987 (알파벳) - https://www.acmicpc.net/problem/1987\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 5\n",
+    "IEFCJ\n",
+    "FHFKC\n",
+    "FFALF\n",
+    "HFGCF\n",
+    "HMCHH''')\n",
     "\n",
+    "# 백트래킹 이용시, 파이썬에서 시간초과, SET BFS 이용.\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    R, C = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    board = [input().rstrip() for _ in range(R)]\n",
+    "    directions = [(+1, 0), (-1, 0), (0, +1), (0, -1)]\n",
+    "\n",
+    "    max_len = 1\n",
+    "    set_q = set([(0, 0, board[0][0])])  # 튜플 셋큐\n",
+    "\n",
+    "    while set_q:\n",
+    "        r, c, visit_str = set_q.pop()  # 랜덤 set.pop\n",
+    "        max_len = max(max_len, len(visit_str))\n",
+    "\n",
+    "        if max_len == 26:\n",
+    "            break  # 알파벳 최대값\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if 0 <= nr < R and 0 <= nc < C:\n",
+    "                nxt = board[nr][nc]\n",
+    "                if nxt not in visit_str:\n",
+    "                    set_q.add((nr, nc, visit_str + nxt))\n",
+    "                    \n",
+    "    print(max_len)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -483,7 +557,24 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.3): 조회수가 가장 많은 중고거래 게시판의 첨부파일 조회하기 - https://school.programmers.co.kr/learn/courses/30/lessons/164671\n",
+    "-- 5. SQL(Lv.3): 조회수가 가장 많은 중고거래 게시판의 첨부파일 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/164671\n",
+    "SELECT\n",
+    "    CONCAT('/home/grep/src/', BOARD_ID, '/', FILE_ID, FILE_NAME, FILE_EXT) AS FILE_PATH\n",
+    "FROM\n",
+    "    USED_GOODS_FILE\n",
+    "WHERE\n",
+    "    BOARD_ID = (\n",
+    "        SELECT\n",
+    "            BOARD_ID\n",
+    "        FROM\n",
+    "            USED_GOODS_BOARD\n",
+    "        ORDER BY\n",
+    "            VIEWS DESC\n",
+    "        LIMIT 1\n",
+    "   )\n",
+    "ORDER BY\n",
+    "    FILE_ID DESC;\n",
     "```"
    ]
   }
