--- a/A03_SOMA_CODINGTEST/B_01_05/C05_D-26_260209.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C05_D-26_260209.ipynb
@@ -185,6 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -202,12 +203,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "793caf11",
+   "cell_type": "markdown",
+   "id": "0fb5e74c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```sql\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
