--- a/A03_SOMA_CODINGTEST/B_01_05/C04_D-27_260208.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C04_D-27_260208.ipynb
@@ -2,26 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 7 4 2 6\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 2161 (카드1) - https://www.acmicpc.net/problem/2161\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    dq = deque(range(1, N + 1))\n",
+    "    answer = []\n",
     "\n",
+    "    while dq:\n",
+    "        answer.append(dq.popleft())\n",
+    "        dq.rotate(-1)\n",
     "\n",
-    "solve()\n"
+    "    print(*answer)\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -29,71 +45,148 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 2292 (벌집) - https://www.acmicpc.net/problem/2292\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''13''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    # ak = 1 + sigma(i,k-1)6i = 1 + 3k(k-1)\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    layer = 1\n",
+    "    while True:\n",
+    "        max_num = 1 + 3*layer*(layer - 1)\n",
+    "        if N <= max_num:\n",
+    "            break\n",
+    "        layer += 1\n",
+    "    print(layer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THEKINGOD\n",
+      "UAENA\n",
+      "IU\n",
+      "ADREAMER\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 17219 (비밀번호 찾기) - https://www.acmicpc.net/problem/17219\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''16 4\n",
+    "noj.am IU\n",
+    "acmicpc.net UAENA\n",
+    "startlink.io THEKINGOD\n",
+    "google.com ZEZE\n",
+    "nate.com VOICEMAIL\n",
+    "naver.com REDQUEEN\n",
+    "daum.net MODERNTIMES\n",
+    "utube.com BLACKOUT\n",
+    "zum.com LASTFANTASY\n",
+    "dreamwiz.com RAINDROP\n",
+    "hanyang.ac.kr SOMEDAY\n",
+    "dhlottery.co.kr BOO\n",
+    "duksoo.hs.kr HAVANA\n",
+    "hanyang-u.ms.kr OBLIVIATE\n",
+    "yd.es.kr LOVEATTACK\n",
+    "mcc.hanyang.ac.kr ADREAMER\n",
+    "startlink.io\n",
+    "acmicpc.net\n",
+    "noj.am\n",
+    "mcc.hanyang.ac.kr''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
+    "    passwords = dict()\n",
+    "    for _ in range(N):\n",
+    "        url, pswd = input().split()\n",
+    "        passwords[url] = pswd\n",
+    "    \n",
+    "    result = []\n",
+    "    for _ in range(M):\n",
+    "        url = input().rstrip()\n",
+    "        result.append(passwords[url])\n",
+    "\n",
+    "    print(\"\\n\".join(result))\n",
     "\n",
     "solve()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 11508 (2+1 세일) - https://www.acmicpc.net/problem/11508\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "6\n",
+    "4\n",
+    "5\n",
+    "5\n",
+    "5\n",
+    "5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "\n",
+    "    prices = [int(input()) for _ in range(N)]\n",
+    "    prices.sort(reverse=True)\n",
+    "\n",
+    "    print(sum(prices) - sum(prices[2::3]))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,7 +195,20 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "--5. SQL(Lv.1): 흉부외과 또는 일반외과 의사 목록 출력하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/132203\n",
+    "SELECT\n",
+    "    DR_NAME,\n",
+    "    DR_ID,\n",
+    "    MCDP_CD,\n",
+    "    DATE_FORMAT(HIRE_YMD, '%Y-%m-%d') AS HIRE_YMD\n",
+    "FROM \n",
+    "    DOCTOR\n",
+    "WHERE\n",
+    "    MCDP_CD IN ('CS', 'GS')\n",
+    "ORDER BY\n",
+    "    HIRE_YMD DESC,\n",
+    "    DR_NAME ASC;\n",
     "```"
    ]
   },
@@ -113,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 16234 (인구 이동) - https://www.acmicpc.net/problem/16234\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 1520 (내리막 길) - https://www.acmicpc.net/problem/1520\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 11779 (최소비용 구하기 2) - https://www.acmicpc.net/problem/11779\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,6 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 4. 알고(백트래킹): 백준 1062 (가르침) - https://www.acmicpc.net/problem/1062\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -202,17 +309,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "793caf11",
+   "cell_type": "markdown",
+   "id": "7c675c68",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```sql\n",
+    "-- 5. SQL(Lv.4): 주문량이 많은 아이스크림들 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/133027\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
